# prpc

./: .gitignore  README.md  client_fail.txt  client_fail_utf8.txt  debug_tests.py  flask_fail.txt  flask_fail_utf8.txt  flask_out.txt  flask_out_utf8.txt  pyproject.toml  pytest_fail.txt  pytest_fail_utf8.txt  pytest_final.txt  pytest_final_utf8.txt  pytest_out.txt  pytest_report.txt  pytest_report_utf8.txt
docs/: icons.json  package-lock.json  package.json  source.config.ts  wrangler.toml
docs/app/: global.css  layout.tsx
docs/app/(home)/: layout.tsx  page.tsx
docs/app/(home)/demo/: page.tsx
docs/app/demo/: page.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/: custom-icon.tsx
docs/components/layout/: language-toggle.tsx  link-item.tsx  search-toggle.tsx  theme-toggle.tsx
docs/components/layout/docs/: client.tsx  index.tsx  sidebar.tsx
docs/components/layout/sidebar/: accordion-folder.tsx  base.tsx  link-item.tsx  page-tree.tsx
docs/components/playground/: Inspector.tsx  PlaygroundEditor.tsx  RequestFlow.tsx
docs/components/toc/: clerk.tsx  default.tsx  index.tsx
docs/components/ui/: animated-button.tsx  back-to-top.tsx  collapsible.tsx  marquee.tsx  perspective-grid.tsx  popover.tsx  scroll-area.tsx  stacked-logos.tsx  testimonial.tsx
docs/content/docs/: cli.mdx  client.mdx  index.mdx  installation.mdx  meta.json  server.mdx
docs/content/docs/client/: advanced.mdx  meta.json  nextjs.mdx  overview.mdx  vanilla.mdx
docs/content/docs/community/: contributing.mdx  (+3 more)
docs/lib/: layout.shared.ts  layout.shared.tsx  merge-refs.ts  source.ts
examples/: basic_client.py  basic_server.py  basic_usage.py
src/prpc/: __init__.py  cli.py
src/prpc/adapters/: fastapi.py  flask.py
src/prpc/cli/: main.py
src/prpc/client/: python_client.py  ts_codegen.py
src/prpc/core/: decorators.py  interpreter.py  models.py  registry.py
src/prpc/templates/: client.ts.j2
tests/: test_asgi.py  test_cli.py  test_cli_commands.py  test_client.py  test_codegen.py  test_decorators.py  test_fastapi.py  test_flask.py  test_interpreter.py  test_introspection.py  test_models.py  test_registry.py
(+36 files in other folders)
