[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prpc"
version = "0.1.0"
description = "A modern Python library for prpc"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AtnatewosH", email = "codesnate@gmail.com" }

]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24.0",
    "anyio>=4.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "fastapi>=0.100.0",
    "flask>=3.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
prpc = "prpc.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prpc"]

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

