[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prpc-workspace"
version = "0.1.0"
description = "pRPC Monorepo Workspace"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "fastapi>=0.100.0",
    "flask>=3.0.0",
    "httpx>=0.24.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.23.0",
    "anyio>=4.0",
    "pydantic>=2.0",
]



[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
prpc = { workspace = true }
prpc-fastapi = { workspace = true }
prpc-flask = { workspace = true }
prpc-codegen = { workspace = true }


[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "packages/prpc/src",
    "packages/prpc-fastapi/src",
    "packages/prpc-flask/src",
    "packages/prpc-codegen/src"
]
asyncio_mode = "auto"
